--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -66,7 +66,7 @@ def makeCompFeatures(seq):
     for feature in range(2,14):
         for i in range(1,67):
             num = (i+5)
-            if (num <17 or num >19):
+            if True:
                 current_factor = (   (66*(feature - 1)) - 66  ) +(i+5)
                 current_class = feature
 
